--- a/style.css
+++ b/style.css
@@ -6,14 +6,63 @@ body {
 
 section {
     display: flex;
+
 }
 
 .food-item {
-    width: 40%;
+    width: 47%;
     padding: 5%;
+    margin: 3%;
 }
 
 .food-item h1 {
     font-weight: 800;
     font-size: 30px;
+}
+
+.header-color {
+    color: rgb(12, 255, 3);
+}
+
+.Food-image {
+    width: 47%;
+    margin: 3%;
+
+}
+
+p {
+    text-align: justify;
+}
+
+.button {
+    text-decoration: none;
+    background-color: rgb(250, 164, 4);
+    padding: 10px;
+    font-weight: bold;
+    color: rgb(183, 0, 255);
+    border-radius: 10px;
+}
+
+.About-me-image img {
+    width: 42%;
+    padding: 5%;
+    padding-left: 20%;
+
+}
+
+.bg-image {
+    background-image: url(images/Frame\ 58.jpg);
+    margin: 0%;
+    border-image-repeat: none;
+    width: 100%;
+
+}
+
+.recipi {
+    text-align: center;
+    width: 50%;
+    margin-top: 20px;
+    margin: auto;
+    display: block;
+
 }
