--- a/style.css
+++ b/style.css
@@ -25,9 +25,15 @@ section {
 }
 
 .Food-image {
-    width: 47%;
-    margin: 3%;
+    width: 40%;
 
+
+}
+
+.Food-image img {
+    width: 100%;
+    display: block;
+    margin: auto;
 }
 
 p {
@@ -41,12 +47,15 @@ p {
     font-weight: bold;
     color: rgb(183, 0, 255);
     border-radius: 10px;
+
 }
 
+
+
 .About-me-image img {
-    width: 42%;
-    padding: 5%;
-    padding-left: 20%;
+    display: block;
+    width: 40%;
+    margin: auto;
 
 }
 
@@ -65,4 +74,19 @@ p {
     margin: auto;
     display: block;
 
+}
+
+.food1 img {
+    display: block;
+    width: 100%;
+    margin: auto;
+}
+
+.food1 {
+    width: 30%;
+    padding: 2%;
+    background-color: rgb(231, 216, 247);
+    margin: 2%;
+    box-shadow: 10px 5px 40px rgb(122, 122, 122);
+    border-radius: 20px 20px 20px 20px;
 }
