--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ p {
     display: block;
     width: 40%;
     margin: auto;
+    padding-top: 4%;
 
 }
 
@@ -89,4 +90,20 @@ p {
     margin: 2%;
     box-shadow: 10px 5px 40px rgb(122, 122, 122);
     border-radius: 20px 20px 20px 20px;
+}
+
+.fotter-style {
+    text-align: center;
+    display: block;
+    margin: auto;
+    width: 50%;
+    background: rgb(252, 219, 171);
+}
+
+.fotter-style h1 {
+    text-align: center;
+}
+
+.fotter-style p {
+    text-align: center;
 }
